# flight-capacity-pipeline

./: .dockerignore  .gitignore  Dockerfile  MakeFile  README.md  docker-compose.yml  pyproject.toml  simple_solution.py
data/processed/: 2022-10-07.csv  2022-10-08.csv
data/raw/: airplane_details.json
data/raw/flight_events/: 2022-10-03.csv  2022-10-04.csv  2022-10-05.csv  2022-10-06.csv  2022-10-09.csv
data/warehouse/: capacity_table.csv  flight_capacity.db  rotate.db
docs/: design_architecture.md  flight_events_documenation.md  rotate_data_challenge.md
src/: cli.py  main.py
src/core/: __init__.py  app.py  app_container.py  container.py  exception_handlers.py  exceptions.py  lifespan.py  settings.py
src/domains/: __init__.py  aircraft.py  capacity.py  flight.py  flight_event.py
src/errors/: __init__.py  app.py  database.py  domain.py  file.py
src/handlers/: capacity.py  health.py
src/handlers/http/: capacity.py  triggers.py
src/repositories/: __init__.py  duckdb_repository.py  interfaces.py  queries.py  sqlite_repository.py
src/repositories/interfaces/: __init__.py  abstract_repository.py
src/repositories/queries/: duckdb.py
src/schemas/requests/: capacity.py  capacity_summary.py
src/schemas/responses/: __init__.py  capacity.py  common.py
src/services/: capacity_service.py  file_service.py  flight_aggregator.py  pipeline_service.py
tests/: conftest.py  test_aggregator.py  test_api.py  test_capacity.py  test_commands.py  test_file_service.py  test_pipeline.py  test_repository.py  test_triggers.py
