[project]
name = "rotate"
version = "0.1.0"
description = "Cargo capacity calculator for airline flight data"
requires-python = ">=3.14.3"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
    "pytest-cov>=6.0.0",
]
